--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -36,10 +36,10 @@ body {
 }
 .display-4 {
   font-family: 'Rubik', sans-serif;
-  font-size: 1rem;
+  font-size: 0.8rem;
 }
 .display-4 > .mbr-iconfont {
-  font-size: 1.6rem;
+  font-size: 1.28rem;
 }
 .display-5 {
   font-family: 'Rubik', sans-serif;
@@ -72,9 +72,9 @@ body {
     line-height: calc( 1.4 * (1.28rem + (1.8 - 1.28) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-4 {
-    font-size: 0.8rem;
-    font-size: calc( 1rem + (1 - 1) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1rem + (1 - 1) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 0.64rem;
+    font-size: calc( 0.93rem + (0.8 - 0.93) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (0.93rem + (0.8 - 0.93) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-5 {
     font-size: 1.2rem;
@@ -4760,7 +4760,7 @@ body {
 }
 .cid-qzQ4FnPNcA {
   padding-top: 120px;
-  padding-bottom: 120px;
+  padding-bottom: 0px;
   background-color: #465052;
 }
 .cid-qzQ4FnPNcA .content-slider {
@@ -5032,4 +5032,16 @@ body {
 }
 .cid-qzQ4FnPNcA .content-slider-wrap {
   width: 100%;
+}
+.cid-qzQ7cv24gR {
+  padding-top: 15px;
+  padding-bottom: 120px;
+  background-color: #465052;
+}
+.cid-qzQ7cv24gR .mbr-text,
+.cid-qzQ7cv24gR blockquote {
+  color: #767676;
+}
+.cid-qzQ7cv24gR .mbr-text P {
+  color: #efefef;
 }
